--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,7 +1,9 @@
 /* 设置一些公共样式属性 */
 
 /* 变量 */
-
+$main-color:#b92f6e; // 系统主色调
+$layout-bg-color: #3a424d; // 框架背景颜色
+$layout-top-height: 60px; // 系统顶部导航栏高度
 
 /* 混合 */
 
